--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1 style="color: blue;">hi welcome to git</h1>
 <p>this is my first git program</p>
-<p>hi how are you nice web</p>
+<p>hi how are you nice web last changed</p>
+<p>new change</p>
 </body>
 </html>
