--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1 style="color: blue;">hi welcome to git</h1>
 <p>this is my first git program</p>
 <p>hi how are you</p>
+<p>nice website</p>
 </body>
 </html>
